# ClaudeClubHackathonAnalyzer

./: .gitignore  AGENTS.md  CLAUDE_CODE_SETUP_GUIDE.md  README.md
.claude/: settings.local.json
hackathon-analyzer/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
hackathon-analyzer/docs/: IMPLEMENTATION_PLAN_NEW_DIMENSIONS.md  IMPLEMENTATION_PLAN_PROPOSAL.md  NEW_IDEAS.md  PLAN.md  VISION.md
hackathon-analyzer/hackathon_analyzer/: __init__.py  cli.py  config.py
hackathon-analyzer/hackathon_analyzer/analyzers/: ai_integration.py  architecture.py  build.py  code_quality.py  documentation.py  hackathon_freshness.py  language.py  originality.py  promise_reality.py  structure.py  tech_stack_novelty.py  testing.py  vision_ambition.py
hackathon-analyzer/hackathon_analyzer/core/: models.py  pipeline.py  repo_manager.py
hackathon-analyzer/hackathon_analyzer/integrations/: claude_api.py  github_api.py
hackathon-analyzer/hackathon_analyzer/reporting/: per_repo_report.py  summary_report.py  terminal.py
hackathon-analyzer/hackathon_analyzer/scoring/: rubric.py  scorer.py
hackathon-analyzer/hackathon_analyzer/utils/: cache.py  file_utils.py  subprocess_runner.py
hackathon-analyzer/tests/: conftest.py  test_repo_manager.py  test_scoring.py
hackathon-analyzer/tests/fixtures/sample_repos/js-no-tests/: package.json
hackathon-analyzer/tests/fixtures/sample_repos/python-clean/: LICENSE  README.md
hackathon-analyzer/tests/fixtures/sample_repos/python-clean/myapp/: __init__.py
hackathon-analyzer/tests/fixtures/sample_repos/python-clean/tests/: test_greet.py
hackathon-analyzer/tests/test_analyzers/: test_build.py  test_structure.py
hackathon-chat/: .env.example  .gitignore  app.py  pyproject.toml
hackathon-chat/agent/: analyzer_bridge.py  chat_agent.py  formatters.py  tools.py  web_search.py
hackathon-chat/docs/: IMPLEMENTATION_PLAN.md  PLAN.md
