[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackathon-analyzer"
version = "0.1.0"
description = "CLI tool to analyze hackathon repository submissions for technical quality and originality"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "gitpython>=3.1",
    "requests>=2.31",
    "anthropic>=0.28",
    "pygments>=2.17",
    "snakemd>=2.2",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
quality = [
    "flake8>=7.0",
    "radon>=6.0",
    "bandit>=1.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "black>=24.0",
    "isort>=5.13",
]

[project.scripts]
hackanalyze = "hackathon_analyzer.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["fixtures", "repos", "cache", "reports", ".venv", "venv"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
exclude = [".venv", "repos", "cache", "__pycache__"]
